...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        print("WebViewViewController loaded")
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [],
             changeHandler: { [weak self] _, _ in
             }
        )
...
